feat: add documentation to  delete video
